cluster/apps/media/nfs-volume.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
