cluster/apps/media/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        volumeMounts:
        - name: config-storage
          mountPath: /config
        - name: nfs-storage
          mountPath: /data
          subPath: downloads/sabnzbd # Isolates SABnzbd downloads inside /export/all/downloads/sabnzbd
        ports:
        - containerPort: 8080
          name: sabnzbd-ui
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: sabnzbd-config-pvc
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-all-media-pvc          
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service
  namespace: media
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: sabnzbd
